# interview-agent

./: .gitignore  DESIGN.md  README.md  pyproject.toml  taskfile.yaml
backend/: .env.example  agent.py  ingest.py  prompts.py  pyproject.toml  rag.py  token_server.py  tools.py
backend/data/chroma_db/: chroma.sqlite3
frontend/: README.md  index.html  package-lock.json  package.json  test_frontend_setup.js
frontend/src/: App.css  App.tsx  AudioVisualizer.css  AudioVisualizer.tsx  index.css  types.ts
frontend/src/components/: AudioVisualizer.tsx  CallInterface.tsx  Transcript.tsx  VideoRenderer.tsx
interview-ai/: agent.py  pyproject.toml  rag.py  token_server.py  tools.py
