[project]
name = "interview-ai"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.1",
    "certifi>=2024.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "livekit>=0.17.0",
]
